--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
     "@remix-run/cloudflare-pages": "^1.19.1",
     "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/react": "^1.19.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "isbot": "^3.6.8",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.19.0",
-    "@pandacss/dev": "^0.7.0",
     "@remix-run/dev": "^1.19.1",
     "@remix-run/eslint-config": "^1.19.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4",
     "wrangler": "^3.1.1"
   },
