--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@remix-run/cloudflare": "^1.19.1",
     "@remix-run/cloudflare-pages": "^1.19.1",
     "@remix-run/css-bundle": "^1.19.1",
