--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@remix-run/cloudflare": "^1.19.1",
     "@remix-run/cloudflare-pages": "^1.19.1",
     "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/react": "^1.19.1",
+    "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "html-react-parser": "^4.2.0",
     "isbot": "^3.6.8",
     "lucide-react": "^0.263.1",
+    "newt-client-js": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
