--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
@@ -22,6 +24,7 @@
     "@remix-run/cloudflare-pages": "^1.19.1",
     "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/react": "^1.19.1",
+    "@tanstack/react-table": "^8.9.3",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
