--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ node_modules
 /.cache
 /functions/\[\[path\]\].js
 /functions/\[\[path\]\].js.map
+/functions/metafile.*
+
 /public/build
 .dev.vars
 styled-system
